@@ -1,3 +1,6 @@
+Shotwell 0.32.13 (stable) - 8 Jun 2025
+ * Fix broken meson file
+
 Shotwell 0.32.12 (stable) - 8 Jun 2025
  * Fix broken appdata
 
